# notion-integrations

./: README.md
job_applications/: README.md  pyproject.toml
job_applications/job_applications/: query_db.py
